fixed z-index of page to not overlap rainbow shadow

--- a/styles/pages/frithjof/Frithjof.module.scss
+++ b/styles/pages/frithjof/Frithjof.module.scss
@@ -13,6 +13,7 @@
   width: 100%;
   height: 100vh;
   padding-top: 50px;
+  z-index: 0;
 }
 
 .title {
